@@ -47,6 +47,8 @@ Features:
   regression tests for Postgres but not currently for mysql.
   See http://www.postgresql.org/docs/9.1/static/transaction-iso.html
   (Ralf Schlatterbeck)
+- /xmlrpc endpoint now shows link to XML-RPC documentation if accessed
+  through browser, without text/xml Content-Type (anatoly techtonik)
 
 Fixed:
 
